<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F8F4"
    android:fillViewport="true"
    tools:context=".ui.fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- EditText para buscar -->
        <LinearLayout
            android:id="@+id/llSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border_et_search"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:src="@drawable/uamx_50" />

            <View
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/etSearch"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="#F9F8F4"
                android:src="@drawable/searchicon" />


            <!-- Botón de escaneo -->
            <!--        <ImageButton
                        android:id="@+id/btnScan"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@color/white"
                        android:contentDescription="@string/btn_scan"
                        android:src="@drawable/baseline_qr_code_scanner_24"
                        app:layout_constraintStart_toEndOf="@+id/etSearch"
                        app:layout_constraintTop_toTopOf="@+id/etSearch" />-->
        </LinearLayout>

        <TextView
            android:id="@+id/tvFirtPraragraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/hankengrotesk_bold"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llSearch" />

        <TextView
            android:id="@+id/btReadMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/custom_button_background"
            android:contentDescription="@string/btn_scan"
            android:fontFamily="@font/hankengrotesk_semibold"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:src="@drawable/baseline_qr_code_scanner_24"
            android:text="@string/leer_m_s_sobre_este_proyecto"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFirtPraragraph" />


        <LinearLayout
            android:id="@+id/llnew_magazines"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btReadMore">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hankengrotesk_semibold"
                android:includeFontPadding="false"
                android:text="@string/nuevos_n_meros_de_revistas"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_NewMagazines"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="horizontal"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llnew_magazines"
            tools:listitem="@layout/magazines_element_new_numbers" />



        <LinearLayout
            android:id="@+id/llNewBooks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_NewMagazines">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hankengrotesk_semibold"
                android:includeFontPadding="false"
                android:text="@string/cat_logo_de_novedades"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:visibility="visible" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_NewBooks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="horizontal"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llNewBooks"
            tools:listitem="@layout/new_books_element" />




            <ProgressBar
                android:id="@+id/pbLoading"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:indeterminateDrawable="@drawable/loading_anim"
                android:indeterminateDuration="1500"
                android:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>